Added refresh token Redis template and updated CORS configuration for production URL